feat: microbenchmark_on_bottlenecks_latex_report_architecture_initialized